--- a/Config.in
+++ b/Config.in
@@ -158,6 +158,7 @@ menu "Controllers"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/controllers/lightguns-games-precalibrations/Config.in"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/controllers/batocera-gun-calibrator/Config.in"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/controllers/fun-r1-gamepad/Config.in"
+  source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/controllers/m17-gamepad/Config.in"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/controllers/hid-nx/Config.in"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/controllers/joycond/Config.in"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/controllers/jammasd/Config.in"
